Graphics mostly done
still to do:
create player - spinner
market - color and font
solar system map - radio buttons, image
universe map - image

--- a/SpaceTrader/app/src/main/res/layout/activity_player_confirm.xml
+++ b/SpaceTrader/app/src/main/res/layout/activity_player_confirm.xml
@@ -5,15 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/space"
     tools:context="edu.gatech.cs2340.SpaceTrader.views.PlayerConfirmation">
 
     <TextView
         android:id="@+id/Profile"
-        android:layout_width="119dp"
+        android:layout_width="209dp"
         android:layout_height="49dp"
-        android:layout_marginEnd="144dp"
+        android:layout_marginEnd="100dp"
+        android:fontFamily="@font/audiowide"
         android:text="@string/profile"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,8 +28,9 @@
         android:layout_width="228dp"
         android:layout_height="26dp"
         android:layout_marginEnd="124dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/player_name_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/difficultyText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,8 +43,9 @@
         android:layout_width="228dp"
         android:layout_height="28dp"
         android:layout_marginEnd="124dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/difficultyText_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/creditsText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,8 +57,9 @@
         android:id="@+id/creditsText"
         android:layout_width="228dp"
         android:layout_height="28dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/creditsText_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/shipText"
         app:layout_constraintStart_toStartOf="@+id/nameText"
@@ -65,8 +70,9 @@
         android:id="@+id/shipText"
         android:layout_width="228dp"
         android:layout_height="28dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/shipText_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/pilotSkillText"
         app:layout_constraintStart_toStartOf="@+id/creditsText"
@@ -77,8 +83,9 @@
         android:id="@+id/pilotSkillText"
         android:layout_width="228dp"
         android:layout_height="28dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/pilotSkillText_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/fighterSkillText"
         app:layout_constraintStart_toStartOf="@+id/shipText"
@@ -89,8 +96,9 @@
         android:id="@+id/fighterSkillText"
         android:layout_width="228dp"
         android:layout_height="28dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/fighterSkillText_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/traderSkillText"
         app:layout_constraintStart_toStartOf="@+id/pilotSkillText"
@@ -101,8 +109,9 @@
         android:id="@+id/traderSkillText"
         android:layout_width="228dp"
         android:layout_height="28dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/traderSkillText_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/engineerSkillText"
         app:layout_constraintStart_toStartOf="@+id/fighterSkillText"
@@ -113,8 +122,9 @@
         android:id="@+id/engineerSkillText"
         android:layout_width="228dp"
         android:layout_height="28dp"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/engineerSkillText_blank"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/game_button"
         app:layout_constraintStart_toStartOf="@+id/traderSkillText"
@@ -125,9 +135,10 @@
         android:id="@+id/game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="144dp"
+        android:layout_marginStart="40dp"
+        android:fontFamily="@font/audiowide"
         android:text="@string/go_to_game"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#673AB7"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/engineerSkillText"
