--- a/SpaceTrader/app/src/main/res/layout/planet_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/planet_screen.xml
@@ -5,32 +5,35 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/space"
         tools:context="edu.gatech.cs2340.SpaceTrader.views.PlanetScreen">
 
         <TextView
         android:id="@+id/planetText"
         android:layout_width="227dp"
         android:layout_height="54dp"
+        android:fontFamily="@font/audiowide"
         android:gravity="center"
         android:text="@string/planetName"
-        android:textColor="@color/design_default_color_primary"
-            android:textSize="30sp"
+        android:textColor="#D6D8E2"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.113" />
+            app:layout_constraintVertical_bias="0.113" />
 
     <TextView
         android:id="@+id/solarSystemText"
         android:layout_width="285dp"
         android:layout_height="53dp"
+        android:fontFamily="@font/dosis_medium"
         android:gravity="center"
         android:text="@string/SSName"
-        android:textColor="@color/design_default_color_primary"
-        android:textSize="18sp"
+        android:textColor="#D6D8E2"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -43,9 +46,10 @@
         android:id="@+id/rssText"
         android:layout_width="290dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/dosis_medium"
         android:gravity="center"
         android:text="@string/resourcesDef"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,9 +64,10 @@
         android:id="@+id/techLevelText"
         android:layout_width="285dp"
         android:layout_height="64dp"
+        android:fontFamily="@font/dosis_medium"
         android:gravity="center"
         android:text="@string/techDef"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="#D6D8E2"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +84,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/audiowide"
         android:text="@string/toMarket"
+        android:textColor="#673AB7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.869"
@@ -93,7 +100,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/audiowide"
         android:text="@string/refuel"
+        android:textColor="#673AB7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
@@ -105,11 +114,13 @@
         android:id="@+id/imageView"
         android:layout_width="229dp"
         android:layout_height="202dp"
+        android:contentDescription="@string/planetImage"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.421"
-        android:contentDescription="@string/planetImage" />
+        tools:visibility="visible" />
 </android.support.constraint.ConstraintLayout>
