--- a/SpaceTrader/app/src/main/res/layout/activity_main.xml
+++ b/SpaceTrader/app/src/main/res/layout/activity_main.xml
@@ -10,41 +10,31 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="227dp"
-        android:layout_height="54dp"
+        android:layout_width="236dp"
+        android:layout_height="265dp"
+        android:fontFamily="@font/audiowide"
         android:text="@string/game_name"
-        android:textColor="@color/design_default_color_primary"
-        android:textSize="36sp"
+        android:textAlignment="center"
+        android:textColor="#F3EDED"
+        android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.243" />
+        app:layout_constraintVertical_bias="0.238" />
 
     <Button
         android:id="@+id/ready_player_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="204dp"
+        android:fontFamily="@font/audiowide"
         android:text="@string/start_game"
+        android:textColor="#673AB7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="124dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/team_name"
-        android:textColor="@color/design_default_color_primary"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ready_player_one" />
 
 
 </android.support.constraint.ConstraintLayout>
