--- a/SpaceTrader/app/src/main/res/layout/three_choice_minigame_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/three_choice_minigame_screen.xml
@@ -4,14 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/space"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/minigameTitle"
-        android:layout_width="226dp"
-        android:layout_height="48dp"
+        android:layout_width="295dp"
+        android:layout_height="88dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/audiowide"
         android:gravity="center"
         android:text="@string/RandomEventTitle"
         android:textColor="@color/design_default_color_primary"
@@ -30,6 +32,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/dosis_medium"
         android:gravity="center"
         android:text="@string/RandEventText"
         android:textColor="@color/design_default_color_primary"
@@ -49,7 +52,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/audiowide"
         android:text="Button"
+        android:textColor="#673AB7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
@@ -63,7 +68,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/audiowide"
         android:text="Button"
+        android:textColor="#673AB7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -79,7 +86,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/audiowide"
         android:text="Button"
+        android:textColor="#673AB7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
