--- a/SpaceTrader/app/src/main/res/values/colors.xml
+++ b/SpaceTrader/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#673AB7</color>
+    <color name="colorPrimaryDark">#300d51</color>
+    <color name="colorAccent">#3dcbdb</color>
     <color name="btnGrayLight">#d7d7d7</color>
     <color name="btnGrayDark">#b9b9b9</color>
+    <color name="design_default_color_primary">#D6D8E2</color>
 </resources>
