--- a/SpaceTrader/app/src/main/res/layout/market_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/market_screen.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/space"
+    android:background="@drawable/space2"
     android:layout_height="match_parent">
 
     <TextView
@@ -135,7 +135,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toEndOf="@id/currentMoney"
-        app:layout_constraintTop_toBottomOf="@id/scrollView2"
+        app:layout_constraintTop_toBottomOf="@id/scrollView1"
         app:layout_constraintVertical_bias="0.545" />
 
     <TextView
