--- a/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
+++ b/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/space"
+    android:background="@drawable/space2"
     tools:context="edu.gatech.cs2340.SpaceTrader.views.SolarSystemMap">
 
 
